--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,3 +23,40 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+
+
+
+
+.gallery-box {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  justify-content: center;
+  padding: 0;
+}
+
+.gallery-item {
+  margin: 12px;
+}
+
+.gallery-link {
+  display: block;
+  width: 360px;
+  height: 200px;
+}
+
+.gallery-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.gallery-image:hover {
+    transform: scale(1.045);
+    transition: 0.5s ease;
+  }
